UAR-581: Address review comments